File: components/nexus-security/src/main/java/org/sonatype/nexus/security/internal/AdminPasswordFileManagerImpl.java